# akamai-workshop-solution-architect-agent

./: .gitignore  README.md
agent/: .dockerignore  .env.example  README.md  pyproject.toml
agent/data/: llms.txt
agent/deploy/: Dockerfile  compose.yaml  single-linode.md
agent/deploy/manifests/: deployment.yaml  postgres.yaml  secret.example.yaml  service.yaml
agent/deploy/scripts/: build_and_push.sh  ghcr_pull_secret.sh  make_secret.sh
agent/docs/: databases-on-akamai.md  discord-integration.md  open-source-agent-stack-on-akamai.md
agent/scripts/: build_docs_index.py
agent/src/: HEARTBEAT.md  akamai_sessions.py  api.py  discord_bridge.py  docs_retrieval.py  heartbeat.py  mcp_integration.py  memory.py  orchestrator.py  sessions.py  telemetry.py
agent/src/config/: __init__.py  settings.py  system_prompts.py
agent/src/hooks/: __init__.py  approval_hook.py  logging_hook.py
agent/src/models/: __init__.py  models.py
agent/src/tools/: _linode.py  advisor.py  config_examples.py  diagrams.py  regions.py  registry.py  runtime.py  writes.py
workshop/: README.md
workshop/01_first_agent/: 01_first_agent.ipynb  README.md  architecture.html
workshop/02_real_data_with_mcp/: 02_real_data_with_mcp.ipynb  README.md  architecture.html
workshop/03_guardrails/: 03_guardrails.ipynb  README.md  architecture.html  hook_lifecycle.html  overview.html
workshop/04_memory_and_sessions/: 04_memory_and_sessions.ipynb  README.md  architecture.html  memory.db
workshop/05_diagrams/: 05_diagrams.ipynb  README.md  architecture.html
workshop/06_evals/: 06_evals.ipynb  (+2 more)
(+27 files in other folders)
