[project]
name = "akamai-sa-agent"
version = "0.1.0"
description = "Akamai Cloud Solutions Architect agent, built with Strands Agents"
readme = "README.md"
requires-python = ">=3.11"
# Everything needed to run is here, so `pip install -e .` installs it all: the MCP
# read server, durable sessions (boto3), telemetry (Langfuse), the Discord bridge,
# and the diagram tools. The diagram tools also need the Graphviz `dot` binary,
# which pip cannot install (brew install graphviz).
dependencies = [
    "strands-agents",
    "strands-agents-tools",
    "strands-agents[openai]",
    "strands-agents[anthropic]",
    "strands-agents[otel]",
    "akamai-cloud-mcp",
    "mcp>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2",
    "python-dotenv",
    "httpx>=0.27",
    "langfuse",
    "boto3>=1.34",
    "discord.py>=2.4",
    "graphviz>=0.20",
    "matplotlib>=3.8",
    "networkx>=3.0",
    "diagrams>=0.23",
]

[project.optional-dependencies]
# Test tooling only. Everything needed to run is in dependencies above.
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
